[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "volnux"
version = "2.0.0"
requires-python = ">=3.8"
authors = [
    {name = "nshaibu", email = "nafiushaibu1@gmail.com"},
]
description="Workflow orchestration and automation management"
keywords=["pipeline","events","concurrency","data","pointy", "pointy-lang", "event-pipeline", "redis", "pointy", "ETL", "volnux"]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "ply==3.11",
    "six==1.17.0",
    "treelib==1.7.0",
    "graphviz==0.20.3",
    "more-itertools>=8.10.0",
    "pydantic_mini>=1.1.6",
    "apscheduler<=3.11.0",
    "typing-extensions==4.12.2",
    "asgiref>=3.11.0",
    "cloudpickle>=3.0.0",
    "redis==5.2.1",
    "cryptography>=41.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools<=1.70.0",   # >=1.60.0
    "psycopg==3.2.5",
    "psycopg-binary==3.2.5",
    "psycopg-pool==3.2.6",
    "psutil==7.1.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
"Issue Tracker"="https://github.com/nshaibu/volnux/issues"
CI="https://github.com/nshaibu/volnux/actions"
[project.optional-dependencies]
dev = [
    "coverage>=7.4.1",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.4",
    "pyflakes==3.2.0",
    "mccabe==0.7.0",
    "flake8==7.1.1",
    "pycodestyle==2.12.1",
    "flake8-black==0.3.6",
    "black>=22.1.0",
    "click==8.1.8",
    "mypy-extensions==1.0.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "redis==5.2.1"
]
metrics = [
    "elasticsearch>=8.0.0",
    "prometheus-client>=0.20.0",
    "requests>=2.31.0"
]
[tool.setuptools]
packages = [
    "volnux",
    "volnux.translator",
    "volnux.protos",
    "volnux.parser",
    "volnux.parser.protocols",
    "volnux.executors",
    "volnux.manager",
    "volnux.mixins",
    "volnux.mixins.utils",
    "volnux.signal",
    "volnux.backends",
    "volnux.backends.stores",
    "volnux.backends.connectors",
    "volnux.telemetry",
    "volnux.execution",
    "volnux.engine",
    "volnux.task",
    "volnux.flows",
    "volnux.concurrency",
]

[tool.coverage.run]
branch = true
concurrency=["multiprocessing"]
source=["volnux"]
omit = [
    "volnux/parser/*",
    "tests/*",
    "volnux/scripts/*",
    "volnux/protos/*"
]
data_file=".coverage"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
ignore_errors = true
skip_empty = true
skip_covered = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
exclude = "protos"

[tool.mypy]
files = "volnux/*.py"
python_version = "3.8" # Set the minimum supported Python version
# 3. Enable a high level of strictness (Highly Recommended)
# This single option turns on many individual strictness checks.
strict = true

# 4. Optional: Fine-tune strictness (if strict=true is too much initially)
# If strict=true is set, these are automatically enabled, but you can override:
disallow_untyped_defs = true # Error if a function definition is missing a type hint
warn_return_any = true       # Warn if a function returns an implicit 'Any' type

# 5. Optional: Handle third-party libraries without stubs
# This prevents errors from libraries you don't control.
ignore_missing_imports = true

# 6. Optional: Per-module/Package Overrides
# You can relax or tighten checks for specific areas
[tool.mypy.explicit_package_bases]
# This is often needed if your source code is under a 'src' directory
# and you want mypy to understand it as a package.
enabled = true

[tool.mypy-some_untyped_legacy_module]
# Relax checks for a specific file or module (e.g., old/temporary code)
disallow_untyped_defs = false
ignore_errors = true

[project.scripts]
# Define the command name and its Python entry function
# Format: command_name = "module.submodule:function_name"
volnux = "volnux.cli:main.main"